--- a/templates/fort-detail.html
+++ b/templates/fort-detail.html
@@ -60,7 +60,7 @@
                     </p>
                     <div class="text-center mb-5">
                         <a href="{{killa.add}}" class="btn btn-primary tm-btn-small">Map location</a><br>
-                        <a href="{{killa.add3d}}" class="btn btn-primary tm-btn-small" style="background-color:#4DC9FF">3D view</a>
+                        <a href="{{killa.add3d}}" class="btn btn-primary tm-btn-small" style="background-color:#4DC9FF">Wikipedia</a>
                     </div>
                     <a href="\forts" class="btn btn-primary tm-btn-big" style="background-color:green">Back To See Another Forts</a><br>
                 </div>
