--- a/templates/fort-detail.html
+++ b/templates/fort-detail.html
@@ -10,7 +10,7 @@
 
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 	
-	<title>Forts Of Pune</title>
+	<title>Forts Near Pune</title>
 
 </head>
 <body>
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="\forts">
                 <i class="fa fa-fort-awesome mr-2" aria-hidden="true"></i>
-                Forts of Pune
+                Forts Near Pune
             </a>
         {% if user.is_authenticated %}
             <div class="align-items-right">
