--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <title>Forts Of Pune</title>
+    <title>Forts Near Pune</title>
     
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap1.min.css' %}">
