--- a/templates/fort.html
+++ b/templates/fort.html
@@ -11,7 +11,7 @@
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 
-    <title>Forts Of Pune</title>
+    <title>Forts Near Pune</title>
 
 </head>
 <body>
@@ -20,7 +20,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="">
                 <i class="fa fa-fort-awesome mr-2" aria-hidden="true"></i>
-                Forts of Pune
+                Forts Near Pune
             </a>
             {% if user.is_authenticated %}
             <div class="align-items-right">
