--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="col-md-6">
-          <form action="https://formsubmit.co/3ddf7ce5c2f2c8e2c64c80a644930cbd" method="POST"> {% csrf_token %}
+          <form action="https://formsubmit.co/grand.storeone@gmail.com" method="POST"> {% csrf_token %}
 
             <div class="row">
               <div class="col-md-6">
