--- a/templates/index.html
+++ b/templates/index.html
@@ -94,6 +94,12 @@
               <div class="col-md-12">
                 <fieldset>
 
+
+				    <input type="hidden" name="_captcha" value="false">
+				    <input type="hidden" name="_next" value="https://forts-of-pune.herokuapp.com/">
+				    <input type="hidden" name="_subject" value="New Visiter in Forts Near Pune">
+
+
                   <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send Message</button>
                 </fieldset>
               </div>
