--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
           <source src="{% static 'images/course-video.mp4' %}" type="video/mp4" />
       </video>
 
-      <div class="video-overlay header-text">
+      <div class="header-text">
           <div class="caption">
               <h2>The Beauty of <em>Sahyadri</em></h2>
 
@@ -114,7 +114,7 @@
         </div>
         <div class="col-md-6">
           <div id="image">
-            <img src="{% static 'images/img1.jpg' %}" width="450" height="425" class="responsive">
+            <img src="{% static 'images/img1.jpg' %}" width="380" height="425" class="responsive">
           </div>
         </div>
       </div>
