--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p> Grad School
+          <p> Fort of Pune
            | Design by: <a rel="sponsored" target="_parent">Nikhil Sanap</a></p>
         </div>
       </div>
